--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@hookform/resolvers": "^3.4.0",
     "@mui/material": "^5.15.17",
     "aos": "^3.0.0-beta.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.416.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
@@ -27,12 +30,18 @@
     "react-toastify": "^10.0.5",
     "react-use": "^17.5.0",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
+    "@types/node": "^20.14.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.2.11"
   }
 }
