--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.0",
@@ -16,6 +19,7 @@
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dnd-kit-sortable-tree": "^0.1.73",
     "dotenv": "^16.4.5",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
@@ -30,6 +34,7 @@
     "react-use": "^17.5.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.6.2",
+    "uuid": "^10.0.0",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
